# PhysimGlobalPose

./: .gitignore  README.md  runMaster.sh  runTests.sh
models/pcl/: crayola_24_ct.pcd  dove_beauty_bar.pcd  elmers_washable_no_run_school_glue.pcd  expo_dry_erase_board_eraser.pcd  folgers_classic_roast_coffee.pcd  kleenex_tissue_box.pcd  laugh_out_loud_joke_book.pcd  rawlings_baseball.pcd  scotch_duct_tape.pcd  soft_white_lightbulb.pcd  up_glucose_bottle.pcd
scripts/: runAPCTests.sh  runFeatureGen.sh  runMaster.sh  runMasterFCN.sh  runYCBTests.sh  runYCBTestsSampled.sh  runYCBTestsSampledLarge.sh
src/detection_package/: CMakeLists.txt  _init_paths.py  package.xml  setup.py
src/detection_package/data/faster_rcnn_models/: test.prototxt
src/detection_package/lib/fast_rcnn/: bbox_transform.py  config.py  test.py  train.py
src/detection_package/lib/roi_data_layer/: roidb.py
src/detection_package/lib/utils/: bbox.c
src/detection_package/srv/: UpdateActiveListFrame.srv  UpdateBbox.srv
src/physim_pose_estimation/: CMakeLists.txt  package.xml
src/physim_pose_estimation/include/: common_io.h
src/physim_pose_estimation/models_visualization/: 002_master_chef_can.ply  003_cracker_box.ply  004_sugar_box.ply  005_tomato_soup_can.ply  006_mustard_bottle.ply  007_tuna_fish_can.ply  008_pudding_box.ply  009_gelatin_box.ply  010_potted_meat_can.ply  011_banana.ply  019_pitcher_base.ply  021_bleach_cleanser.ply  024_bowl.ply  025_mug.ply  035_power_drill.ply  036_wood_block.ply  037_scissors.ply  040_large_marker.ply  051_large_clamp.ply  052_extra_large_clamp.ply  061_foam_brick.ply  crayola_24_ct.ply  dove_beauty_bar.ply  elmers_washable_no_run_school_glue.ply  expo_dry_erase_board_eraser.ply  folgers_classic_roast_coffee.ply  kleenex_tissue_box.ply  laugh_out_loud_joke_book.ply  rawlings_baseball.ply  scotch_duct_tape.ply  soft_white_lightbulb.ply  up_glucose_bottle.ply
src/physim_pose_estimation/src/: main.cpp  main_genModelFeatures.cpp  main_viz.cpp
src/physim_pose_estimation/src/data_layer/: GlobalCfg.cpp  GlobalCfg.hpp  Objects.cpp  Objects.hpp  SceneCfg.cpp  SceneCfg.hpp  obj_config.yml  obj_config_apc.yml  obj_config_ycb.yml
src/physim_pose_estimation/src/hypothesis_generation/: ObjectPoseCandidateSet.cpp  ObjectPoseCandidateSet.hpp
src/physim_pose_estimation/src/hypothesis_verification/: HypothesisSelection.cpp  HypothesisSelection.hpp
src/physim_pose_estimation/src/hypothesis_verification/greedy_bfs/: Search.cpp  State.cpp
src/physim_pose_estimation/src/hypothesis_verification/mcts/: UCTSearch.cpp  UCTSearch.hpp  UCTState.cpp  UCTState.hpp
src/physim_pose_estimation/src/hypothesis_verification/physics_reasoning/: PhySim.cpp
src/physim_pose_estimation/src/misc/: utilities.cpp
src/physim_pose_estimation/src/segmentation/: Segmentation.cpp  Segmentation.hpp
src/physim_pose_estimation/src/visualization/: PoseVisualization.cpp  PoseVisualization.hpp
src/physim_pose_estimation/srv/: EstimateObjectPose.srv
src/physim_uct/: CMakeLists.txt  package.xml
src/physim_uct/include/: APCObjects.hpp  Evaluate.hpp  PhySim.hpp  Scene.hpp  Search.hpp  State.hpp  UCTSearch.hpp  UCTState.hpp  common_io.h
src/physim_uct/msg/: ObjectPose.msg
src/physim_uct/src/: APCObjects.cpp  Evaluate.cpp  PhySim.cpp  Scene.cpp  Search.cpp  State.cpp  UCTSearch.cpp  UCTState.cpp  physim_uct.cpp  utilities.cpp
src/physim_uct/srv/: EstimateObjectPose.srv
test/: cam.info.txt~  cameraExtrinsic.txt~  cameraIntinsic.txt  kmatrix~  objects.txt
test-scene/: gt_info.yml
test/debug/: frame-000000.expo_dry_erase_board_eraser.score.txt  frame-000000.kleenex_tissue_box.score.txt  frame-000000.scotch_duct_tape.score.txt
